DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Jun-19-2006 patrick     Refactored vrj::OsgApp so that the scene view is
                        updated only once per frame. Subclasses overriding
                        vrj::OsgApp::latePreFrame() must be sure to call up to
                        the base class implementation as the last step in the
                        override.
                        NEW VERSION: 2.1.9
May-24-2006 dshipton    Versioning of installables for multiple installations.
                        NEW VERSION: 2.1.8
Feb-15-2006 patrickh    Updated to VPR 1.1.16.
                        NEW VERSION: 2.1.7
Jan-08-2006 allenb      Added swapSync test application.
Jan-07-2006 allenb      Added GlExtensionLoader classes.
                        Added support for NV swap_group.
                        NEW VERSION: 2.1.6
Oct-18-2005 patrickh    Added the functions vrj::getVersionString() and
                        vrj::getVersionNumber().
                        NEW VERSION: 2.1.5
Jul-25-2005 patrickh    Added vrj::Projection::getNearFar().
                        NEW VERSION: 2.1.4
Jul-18-2005 patrickh    Do not call pfExit() in vrj::PfDrawManager::closeAPI().
                        Leave that up to application programmers to put at the
                        end of their main() function instead.
                        NEW VERSION: 2.1.3
Jul-11-2005 patrickh    Updated to VPR 1.1.3.
Jul-10-2005 patrickh    Updated to VPR 1.1.2.
Jun-22-2005 aronb       Ensure that we close each OpenGL window and its
                        associated context.
Jun-10-2005 patrickh    Removed the VR Juggler 1.0 compatibility headers.
                        NEW VERSION: 2.1.2
Jun-09-2005 patrickh    Updated to support Windows 64-bit edition.
                        NEW VERSION: 2.1.1
Jun-07-2005 patrickh    VR Juggler 2.0 branch created.
                        NEW VERSION: 2.1.0
