@@ -217,9 +217,11 @@ OBJEXT=			@OBJEXT@
 OBJ_BUILD_FLAG=		@OBJ_BUILD_FLAG@
 OBJ_NAME_FLAG=		@OBJ_NAME_FLAG@
 OS_TYPE=		@OS_TYPE@
+PLATFORM_SDK=		@PLATFORM_SDK@
 PERL=			@PERL@
 RANLIB=			@RANLIB@
 RMIC=			@RMIC@
+UNIVERSAL_ARCH_LIST=	@UNIVERSAL_ARCH_LIST@
 
 # Warning levels for C and C++ needed by dpp.obj-common.mk.
 C_WARNS_LEVEL_0=	@C_WARNS_LEVEL_0@
@@ -362,6 +364,26 @@ ifeq ($(ABI), ELF)
       CFLAGS+=		-m64
       CXXFLAGS+=	-m64
       LDOPTS+=		-m64
+   endif
+endif
+ifeq ($(ABI), Mach-O)
+   ifeq ($(ISA), powerpc)
+      CFLAGS+=		-arch ppc $(PLATFORM_SDK)
+      CXXFLAGS+=	-arch ppc $(PLATFORM_SDK)
+      LDOPTS+=		-arch ppc $(PLATFORM_SDK)
+   endif
+   ifeq ($(ISA), i386)
+      CFLAGS+=		-arch i386 $(PLATFORM_SDK)
+      CXXFLAGS+=	-arch i386 $(PLATFORM_SDK)
+      LDOPTS+=		-arch i386 $(PLATFORM_SDK)
+   endif
+   ifeq ($(ISA), universal)
+      CFLAGS+=		$(foreach arch,$(UNIVERSAL_ARCH_LIST),-arch $(arch)) \
+			$(PLATFORM_SDK)
+      CXXFLAGS+=	$(foreach arch,$(UNIVERSAL_ARCH_LIST),-arch $(arch)) \
+			$(PLATFORM_SDK)
+      LDOPTS+=		$(foreach arch,$(UNIVERSAL_ARCH_LIST),-arch $(arch)) \
+			$(PLATFORM_SDK)
    endif
 endif
 
