@@ -37,7 +37,7 @@ AC_COPYRIGHT([VR Juggler is (C) Copyright 1998-2006 by Iowa State University])
 AC_CONFIG_SRCDIR([Makefile.in])
 AC_REVISION($Revision$)
 AC_CONFIG_AUX_DIR([../../../share/config])
-DPP_PREREQ([1.5.1])
+DPP_PREREQ([2.1.2])
 DPP_INIT
 
 # -----------------------------------------------------------------------------
@@ -141,14 +141,14 @@ DPP_PROG_LINKER
 # -----------------------------------------------------------------------------
 # Checks for libraries.
 # -----------------------------------------------------------------------------
-vrj_version='1.1.154'
-jccl_version='0.17.0'
+vrj_version='2.1.10'
+jccl_version='1.1.5'
 VRJUGGLER_PATH([$vrj_version], [test_tweek_cxx='Y'],
    [AC_MSG_WARN([*** VRJ C++ API required for VRJ C++ plug-ins ***])
     test_tweek_cxx='N'
    ])
 
-min_tweek_version='0.20.0'
+min_tweek_version='1.1.5'
 if test "x$test_tweek_cxx" = "xY" ; then
    TWEEK_PATH_CXX([$min_tweek_version], [HAVE_TWEEK_CXX='Y'],
       [AC_MSG_WARN([*** Tweek C++ API required for performance monitoring ***])
