@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jun-26-2006 patrick     Added support for building universal binaries on Mac
+                        OS X.
+                        NEW VERSION: 2.1.10
 Jun-19-2006 patrick     Refactored vrj::OsgApp so that the scene view is
                         updated only once per frame. Subclasses overriding
                         vrj::OsgApp::latePreFrame() must be sure to call up to
